objects/privateAppEx__ListingActivity__c.object
<CustomObject>
    <description>Tracks user activity (e.g. install) on each listing in the store.</description>
    <fields>
        <fullName>privateAppEx__AssetType__c</fullName>
        <description>The type of asset that was viewed on the listing.</description>
        <formula>privateAppEx__ListingAsset__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of asset that was viewed on the listing.</inlineHelpText>
        <label>Asset Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the same type of activity was taken by the same user on the same listing within the last 180 days.</description>
        <inlineHelpText>Indicates if the same type of activity was taken by the same user on the same listing within the last 180 days.</inlineHelpText>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privateAppEx__ListingAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The listing asset that was accessed if applicable.</description>
        <inlineHelpText>The listing asset that was accessed if applicable.</inlineHelpText>
        <label>Listing Asset</label>
        <referenceTo>privateAppEx__ListingAsset__c</referenceTo>
        <relationshipLabel>Listing Activities</relationshipLabel>
        <relationshipName>Listing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Listing__c</fullName>
        <description>The listing on which the activity occurred.</description>
        <inlineHelpText>The listing on which the activity occurred.</inlineHelpText>
        <label>Listing</label>
        <referenceTo>privateAppEx__Listing__c</referenceTo>
        <relationshipLabel>Listing Activities</relationshipLabel>
        <relationshipName>Listing_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Status__c</fullName>
        <description>Represents the status of the user&apos;s request to access a listing.</description>
        <inlineHelpText>Represents the status of the user&apos;s request to access a listing.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Listing Activity</label>
    <nameField>
        <displayFormat>LA-{0}</displayFormat>
        <label>Listing Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Activities</pluralLabel>
    <recordTypes>
        <fullName>privateAppEx__AccessRequest</fullName>
        <active>true</active>
        <description>Request for access to the listing app.</description>
        <label>AccessRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>privateAppEx__AssetView</fullName>
        <active>true</active>
        <description>Viewed a listing asset.</description>
        <label>AssetView</label>
    </recordTypes>
    <recordTypes>
        <fullName>privateAppEx__Install</fullName>
        <active>true</active>
        <description>Installed the app.</description>
        <label>Install</label>
    </recordTypes>
    <recordTypes>
        <fullName>privateAppEx__PageView</fullName>
        <active>true</active>
        <description>Viewed the listing page.</description>
        <label>PageView</label>
    </recordTypes>
    <recordTypes>
        <fullName>privateAppEx__RequestInstall</fullName>
        <active>true</active>
        <description>Indicates new access for app, dependent on app type: access request for web apps, install for mobile apps.</description>
        <label>RequestInstall</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>